# benchwarmer

./: .gitignore  README.md
.github/workflows/: ci.yml
migrations/: 0001_initial_schema.sql
runner/: bench.sh
scripts/: extract_trace_events.py
server/: Cargo.toml
server/src/: db.rs  lib.rs  main.rs  report.rs  routes.rs  storage.rs  utils.rs
server/src/parse/: build.rs  decl.rs  mod.rs  profile.rs  trace.rs
workflows/: bench-main.yml  bench-pr.yml  bench-weekly.yml
